--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-minimal
 title: Bulk Regex Renamer
-description: A simple tool to rename files using regular expressions.
+description: A simple tool to rename multiple files at once using regular expressions.
