added reference to Sprache

--- a/NeXt.BulkRenamer/packages.config
+++ b/NeXt.BulkRenamer/packages.config
@@ -8,5 +8,6 @@
   <package id="MahApps.Metro" version="1.5.0" targetFramework="net47" />
   <package id="Ookii.Dialogs" version="1.0" targetFramework="net47" />
   <package id="PropertyChanged.Fody" version="2.1.4" targetFramework="net47" developmentDependency="true" />
+  <package id="Sprache" version="2.1.0" targetFramework="net47" />
   <package id="ThomasLevesque.WeakEvent" version="2.0.0" targetFramework="net47" />
 </packages>
