limited parsing to visible area during preview and added re-compute on submit

--- a/NeXt.BulkRenamer/App.config
+++ b/NeXt.BulkRenamer/App.config
@@ -21,6 +21,10 @@
         <assemblyIdentity name="MahApps.Metro" publicKeyToken="f4fb5a3c4d1e5b4f" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-1.5.0.23" newVersion="1.5.0.23" />
       </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="System.Windows.Interactivity" publicKeyToken="31bf3856ad364e35" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-4.0.0.0" newVersion="4.0.0.0" />
+      </dependentAssembly>
     </assemblyBinding>
   </runtime>
 </configuration>
